# MandelbulbVariationsGenerator

./: .gitignore  Dockerfile  README.md  pyproject.toml
samples/: README.md
src/mandelbulbvariationsgenerator/: __init__.py
src/mandelbulbvariationsgenerator/HybridMandelbulbVariations/: __init__.py  mandelbulb_512a_512a_color.frag  names_class.txt
src/mandelbulbvariationsgenerator/HybridMandelbulbVariationsIllustration/: __init__.py  mandelbulb_512a_512a_color.frag  names_class.txt
src/mandelbulbvariationsgenerator/MandelbulbVariations/: __init__.py  mandelbulb_512_color.frag
